<resources>
    <string name="app_name">RideWizard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="title_ole">Enter Old Password</string>
    <string name="title_new">Enter Old Password</string>
    <string name="title_re_new">Enter Old Password</string>
    <string name="holder_old">Old password</string>
    <string name="holder_new">New password</string>
    <string name="holder_re_new">Re enter new password</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="setting">Setting</string>
    <string name="region">Region</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy Policy</string>
    <string name="term_of_use">Term of use</string>
    <string name="delete">Delete Account</string>
    <string name="geolocation">Geolocation</string>
    <string name="current">Current</string>
    <string name="map">Map</string>
    <string name="order">Order</string>
    <string name="chat">Chat</string>
    <string name="more">More</string>
    <string name="your_location">Your location</string>
    <string name="auto">AUTO</string>
    <string name="name">Do Minh Quan</string>
    <string name="show">Show</string>
    <string name="system_notifications">System notifications</string>
    <string name="notification_a_orders">Notifications about orders</string>
    <string name="city">City</string>
    <string name="support">Support</string>
    <string name="services">Services</string>
    <string name="money">Money</string>
    <string name="follow">Follow us</string>
    <string name="about">About</string>
    <string name="switch_to_user">Switch to User</string>
    <string name="logout">Log out</string>
    <string name="login">Login</string>
    <string name="tt_login">123456789</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="phoneNo">Phone number</string>
    <string name="tt_phoneNo">+84935365832</string>
    <string name="vehicle">Vehicle</string>
    <string name="tt_vehicle">Motorcycle red 73H1111999</string>
    <string name="get_a_priority">Get a priority and a decreased commission fee</string>
    <string name="tt_get_a_priority">Add on vehicle</string>
    <string name="email">Email</string>
    <string name="tt_email">abc@gmail.com</string>
    <string name="client_promo_code">Client promo code</string>
    <string name="tt_client_promo_code">DRV123456</string>
    <string name="driver_recruiter_code">Driver recruiter code</string>
    <string name="id_card">ID Card verification</string>
    <string name="tt_id_card">Complete before 18/11/2023</string>
    <string name="driver_portrait">Driver Portrait verification</string>
    <string name="driver_license">Driver License verification</string>
    <string name="criminal_record">Criminal record certificate verification</string>
    <string name="compulsory_accident">Compulsory accident insurance verification</string>
    <string name="medical_health">Medical health check verification</string>
    <string name="vehicle_certificate">"Vehicle certificate verification "</string>
    <string name="vehicle_image">Vehicle image verification</string>
    <string name="send">Send</string>
    <string name="map_driver">Map Driver</string>
    <string name="photo_verification">Photo verification</string>
</resources>