<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.menu.setting.change_password.ChangePasswordActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_back"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_marginStart="25dp"
            android:layout_gravity="center"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/title_ole"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <FrameLayout
            android:id="@+id/bg_old"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/transparent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="10dp"

                android:hint="@string/holder_old"
                android:inputType="textPassword"
                android:textSize="20sp"

                tools:ignore="RtlSymmetry,TextFields"
                />
            <ImageButton
                android:id="@+id/eye1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:src="@drawable/baseline_remove_red_eye_24"
                android:background="@color/white"

                tools:ignore="RtlHardcoded" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/title_new"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <FrameLayout
            android:id="@+id/bg_new"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/transparent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="10dp"

                android:hint="@string/holder_new"
                android:textSize="20sp"
                android:inputType="textPassword"

                tools:ignore="RtlSymmetry,TextFields"
                />
            <ImageButton
                android:id="@+id/eye2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:src="@drawable/baseline_remove_red_eye_24"
                android:background="@color/white"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/title_re_new"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <FrameLayout
            android:id="@+id/bg_re_new"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/re_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/transparent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="10dp"

                android:hint="@string/holder_re_new"
                android:textSize="20sp"
                android:inputType="textPassword"

                tools:ignore="RtlSymmetry,TextFields"
                />
            <ImageButton
                android:id="@+id/eye3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:src="@drawable/baseline_remove_red_eye_24"
                android:background="@color/white"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>
        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:justificationMode="inter_word"

            android:textColor="@color/red"
            android:textSize="18sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
    <RadioButton
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:button="@null"
        android:gravity="center"
        android:background="@drawable/bg_button_save"
        android:layout_marginTop="50dp"

        android:text="@string/bt_save"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:letterSpacing="0.2"
        />
</LinearLayout>