<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.menu.setting.SettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_header"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_back"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_marginStart="25dp"
            android:layout_gravity="center"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/setting"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/region"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/local"
                        app:tint="#4B545A" />
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/region"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    android:rotation="180"
                    android:layout_gravity="right|center"
                    app:tint="#4B545A"
                    tools:ignore="RtlHardcoded" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C4C4C7"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/language"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/language"
                        app:tint="#4B545A" />
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/language"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    android:rotation="180"
                    android:layout_gravity="right|center"
                    app:tint="#4B545A"
                    tools:ignore="RtlHardcoded" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C4C4C7"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/change_password"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/change_password"
                        app:tint="#4B545A" />
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/change_password"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    android:rotation="180"
                    android:layout_gravity="right|center"
                    app:tint="#4B545A"
                    tools:ignore="RtlHardcoded" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C4C4C7"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/privacy"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/privacy_policy"
                        app:tint="#4B545A" />
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/privacy"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    android:rotation="180"
                    android:layout_gravity="right|center"
                    app:tint="#4B545A"
                    tools:ignore="RtlHardcoded" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C4C4C7"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/contact_us"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/contact_us"
                        app:tint="#4B545A" />
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/contact_us"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    android:rotation="180"
                    android:layout_gravity="right|center"
                    app:tint="#4B545A"
                    tools:ignore="RtlHardcoded" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C4C4C7"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/term_of_use"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/term_of_use"
                        app:tint="#4B545A" />
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/term_of_use"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    android:rotation="180"
                    android:layout_gravity="right|center"
                    app:tint="#4B545A"
                    tools:ignore="RtlHardcoded" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C4C4C7"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/delete"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/delete"
                        app:tint="@color/red" />
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/red"
                        android:text="@string/delete"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    android:rotation="180"
                    android:layout_gravity="right|center"
                    app:tint="@color/red"
                    tools:ignore="RtlHardcoded" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C4C4C7"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/geolocation"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/geolocation"
                        app:tint="#4B545A" />
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/geolocation"/>
                </LinearLayout>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_geolocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    app:track="@color/red"
                    android:thumb="@color/red"

                    android:checked="true"
                    tools:ignore="RtlHardcoded" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C4C4C7"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>